Adds the main classes including the board generation

--- a/DrafterBattler/Config/DefaultEngine.ini
+++ b/DrafterBattler/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=DrafterBattler
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PuzzleBP/Maps/PuzzleExampleMap
-GameDefaultMap=/Game/PuzzleBP/Maps/PuzzleExampleMap
+EditorStartupMap=/Game/Maps/MAP_BattleScene.MAP_BattleScene
+GameDefaultMap=/Game/Maps/MAP_BattleScene.MAP_BattleScene
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
