--- a/DrafterBattler/Config/DefaultGame.ini
+++ b/DrafterBattler/Config/DefaultGame.ini
@@ -1,8 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=57C7C14E48D5F515A0D555BFA8FD7C55
-ProjectName=Puzzle BP Game Template
+ProjectName=Drafter Battler
 
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
